[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blockbuffer"
dynamic = ["version"]
description = "Buffer audio samples into fixed-sized blocks, with overlap"
readme = "README.md"
license = ""
authors = [
    { name = "Daniel Jones", email = "dan-code@erase.net" },
]
keywords = [
    "audio",
    "buffer",
    "data",
    "dsp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "numpy",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/ideoforms/python-blockbuffer"

[tool.hatch.version]
path = "blockbuffer/__init__.py"

[tool.hatch.envs.default]
python="3"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
]

[tool.hatch.build.targets.sdist]
include = [
    "/blockbuffer",
]
